[tool.black]
line_length = 80

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["schema", "floss", "jargon"]
line_length = 80
multi_line_output = 3
use_parentheses = true
virtual_env = "env"

[tool.pylint."messages control"]
disable = ["C0330", "C0326", "duplicate-code", "fixme"]

[tool.pylint.format]
max-line-length = 80
ignore-long-lines = ".*(https?://|VarBind|ObjectIdentifier|# type: ignore).*"

[tool.pylint.master]
ignore = [".git", "env"]

[tool.pylint.basic]
good-names = [
    "i",
    "j",
    "k",
    "n",
    "m",
    "ex",
    "ip",
    "Run",
    "_"
]

[tool.pylint.reports]
output-format = "colorized"
reports = "no"

[tool.pylint.design]
max-locals = 25
max-args = 8

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --cov=puresnmp --cov=puresnmp_plugins --cov-report=term-missing"
testpaths = [
    "tests",
    "puresnmp",
]

[tool.poetry]
name = "puresnmp"
version = "2.0.0-alpha.11"
description = "Pure Python SNMP implementation"
authors = ["Michel Albert <michel@albert.lu>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/exhuma/puresnmp"
repository = "https://github.com/exhuma/puresnmp"
keywords = ["networking", "snmp"]
include = ["puresnmp/py.typed"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
packages = [
    {include="puresnmp_plugins"},
    {include="puresnmp"},
]

[tool.poetry.dependencies]
dataclasses = {version = "^0.7", python = "<3.7"}
importlib-metadata = {version = "^3.3.0", python = "<3.8"}
puresnmp-crypto = {version = "^1.0.0", optional = true}
python = "^3.6"
t61codec = "^1.0.1"
x690 = "0.5.0a4"

[tool.poetry.extras]
crypto = ["puresnmp-crypto"]

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
fabric = "^2.6.0"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-dependency = "^0.5.1"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
