[tool.black]
line_length = 80

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
use_parentheses = true
virtual_env = "env"

[tool.pylint."messages control"]
disable = ["C0330", "C0326", "duplicate-code", "fixme"]

[tool.pylint.format]
max-line-length = 80
ignore-long-lines = ".*(https?://|VarBind|ObjectIdentifier|# type: ignore).*"

[tool.pylint.master]
ignore = [".git", "env"]

[tool.pylint.basic]
good-names = [
    "i",
    "j",
    "k",
    "n",
    "m",
    "ex",
    "ip",
    "Run",
    "_"
]

[tool.pylint.reports]
output-format = "colorized"
reports = "no"

[tool.pylint.design]
max-locals = 25
max-args = 8

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--doctest-modules --cov=puresnmp --cov=puresnmp_plugins --cov-report=term-missing"
testpaths = [
    "tests",
    "puresnmp",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
