[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "puresnmp"
version = "2.0.1"
authors = [
    { name = "Michel Albert", email = "michel@albert.lu" },
    { name = "POST Luxembourg", email = "opensource@post.lu" },
]
description = "Pure Python SNMP implementation"
keywords = ["networking", "snmp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
license = { text = "MIT" }

requires-python = ">=3.6"
dependencies = [
    'dataclasses; python_version < "3.7"',
    'importlib_metadata; python_version < "3.8"',
    'typing_extensions; python_version < "3.8"',
    'x690 >= 1.0, <2.0',
]

[project.optional-dependencies]
readthedocs = ["fabric"]
crypto = ["puresnmp-crypto >= 1.0.1"]
dev = [
    'asyncmock; python_version < "3.8"',
    "black >= 20.8b1",
    "fabric >= 2.6.0",
    "furo",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dependency",
    "sphinx",
    "types-dataclasses",
]

[project.urls]
Homepage = "https://github.com/exhuma/puresnmp"
"Bug Tracker" = "https://github.com/exhuma/puresnmp/issues"
Repository = "https://github.com/exhuma/puresnmp"

[tool.black]
line-length = 80

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
use_parentheses = true
virtual_env = "env"

[tool.pylint."messages control"]
disable = ["C0330", "C0326", "duplicate-code", "fixme"]

[tool.pylint.format]
max-line-length = 80
ignore-long-lines = ".*(https?://|VarBind|ObjectIdentifier|# type: ignore).*"

[tool.pylint.master]
ignore = [".git", "env"]

[tool.pylint.basic]
good-names = ["i", "j", "k", "n", "m", "ex", "ip", "Run", "_"]

[tool.pylint.reports]
output-format = "colorized"
reports = "no"

[tool.pylint.design]
max-locals = 25
max-args = 8

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = ["error"]
minversion = "6.0"
# addopts = "--doctest-modules --cov=puresnmp --cov=puresnmp_plugins --cov-report=term-missing"
testpaths = ["tests", "puresnmp"]
