[metadata]
name = puresnmp
version = 2.0.0-rc.1
description = Pure Python SNMP implementation
long_description = file: README.rst
author = Michel Albert
author_email = opensource@post.lu
license = MIT

keywords =
    networking
    snmp
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Systems Administration
url = https://github.com/exhuma/puresnmp
project_urls =
    Bug Tracker = https://github.com/exhuma/puresnmp/issues
    Repository = https://github.com/exhuma/puresnmp

[options]
python_requires = >=3.6
include_package_data = True
packages =
    puresnmp
    puresnmp_plugins.auth
    puresnmp_plugins.mpm
    puresnmp_plugins.priv
    puresnmp_plugins.security

install_requires =
    dataclasses; python_version < "3.7"
    importlib_metadata; python_version < "3.8"
    x690 >= 1.0, <2.0

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3
readthedocs =
    fabric
crypto =
    puresnmp-crypto
dev =
    asyncmock; python_version < "3.8"
    black >= 20.8b1
    fabric >= 2.6.0
    mypy
    pylint
    pytest
    pytest-asyncio
    pytest-cov
    pytest-dependency
    sphinx
    sphinx-rtd-theme
    types-dataclasses

[options.package_data]
puresnmp = py.typed


; vim: set filetype=ini ;
